--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
     "slugify": "^1.6.6"
